--- a/comments_demo/static/css/style.css
+++ b/comments_demo/static/css/style.css
@@ -20,3 +20,38 @@ body {
 	z-index: 100;
 }
 
+.comment {
+    width: 100%;
+    margin-left: 0;
+}
+
+.row {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.row .col {
+    float: left;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0 0.75rem;
+}
+
+.row .col.s2 {
+    width: 10%;
+    margin-left: 0;
+}
+
+.row .col.s10 {
+    width: 90%;
+    margin-right: 0;
+}
+
