--- a/comments_demo/templates/demo.html
+++ b/comments_demo/templates/demo.html
@@ -95,10 +95,12 @@
 		render: function() {
 			return (
 				<div className="comment">
-					<h2 className="commentAuthor">
-						{this.props.author}
-					</h2>
-					<div>{this.props.children}</div>
+					<div className="row">
+						<div className="commentAuthor col s2">
+								{this.props.author}
+						</div>
+						<div className="commentText col s10">{this.props.children}</div>
+					</div>
 				</div>
 			);
 		}
