aray of objects extraction pending

--- a/django_comments/templates/index.html
+++ b/django_comments/templates/index.html
@@ -10,13 +10,15 @@
 		},
 		loadCommentsFromServer: function() {
 			$.ajax({
-				url : this.props.url,
+				url : 'get_comments/',
 				dataType : 'json',
 				success : function(data) {
+					console.log('in - '+ data);
 					this.setState({data: data});
 				}.bind(this),
 				error : function(xhr, status, err) {
-					console.error(this.props.url, status, err.toString());
+					console.log('out');
+					console.error('get_comments/', status, err.toString());
 				}.bind(this)
 			});
 		},
