--- a/django_comments/templates/index.html
+++ b/django_comments/templates/index.html
@@ -10,7 +10,7 @@
 		},
 		loadCommentsFromServer: function() {
 			$.ajax({
-				url : 'get_comments/',
+				url : '',
 				dataType : 'json',
 				success : function(data) {
 					console.log('in - '+ data);
@@ -18,7 +18,7 @@
 				}.bind(this),
 				error : function(xhr, status, err) {
 					console.log('out');
-					console.error('get_comments/', status, err.toString());
+					console.error('', status, err.toString());
 				}.bind(this)
 			});
 		},
@@ -32,7 +32,6 @@
 				dataType: 'json',
 				data: comment,
 				success: function(data) {
-					console.log('data - '+ data);
 					this.setState({data: data});
 				}.bind(this),
 				error: function(xhr, status, err) {
